web/src/styles/_objects.scss
// --- loading spinner ---

.loader {
  position: fixed;
  z-index: 100;
  top: calc(50% - 100px) !important;
  left: calc(50% - 100px) !important;
}
// --- buttons ---
button {
  line-height: 1.5em;
  font-size: 1em;
  fill: white;
  font-family: $font-family;
  margin-right: 0.25em;
  margin-left: 0.25em;
  margin-bottom: 0.25em;
  border-color: $grey-40;
  cursor: pointer;

  &:focus {
    outline: none !important;
  }

  &.chip {
    border-radius: 1em;
    display: flex;
    align-items: center;
    padding: 2px 8px;
    cursor: pointer;
    &:focus {
        outline: none !important;
    }
    &.chip {
        border-radius: 1em;
        display: flex;
        align-items: center;
        padding: 2px 8px;
        white-space: nowrap;
        cursor: pointer;
        & .remove-btn {
            margin-left: 0.25em;
            font-size: 0.75em;
        }
    }
  }
}

.all-selected,
.to-add.all-selected,
button.chip:hover {
  background: $grey-80 !important;
  color: white;

  & .remove-btn {
    color: $warning-color !important;
  }
}

.to-add {
  background: #DDD !important;

  & .add-btn {
    color: $grey-60 !important;
  }
}

button.chip.to-add:hover {
  background: #DDD !important;
  color: $base-grey;
  cursor: default;
  // background: $primary-color !important;

  & .add-btn {
    color: white !important;
  }
}

.btn-main{
  background: $primary-color !important;
  color: white;
  transition: all .5s;
  text-transform: uppercase;
  &:hover{
    background: $secondary-color !important;
    color: white;
  }
  &-outline{
    background: transparent;
    border: $primary-color 2px solid !important;
    color: $secondary-color;
    transition: all .5s;
    text-transform:uppercase;
    &:hover{
      background: $primary-color !important;
      color: white;
    }
  }
}

